Kaggle Notebook | first_kaggel_notebook | Version 2

--- a/first-kaggel-notebook.ipynb
+++ b/first-kaggel-notebook.ipynb
@@ -3,22 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cf27375c",
+   "id": "4c4f6b29",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-02-01T23:13:55.939339Z",
-     "iopub.status.busy": "2022-02-01T23:13:55.938158Z",
-     "iopub.status.idle": "2022-02-01T23:13:55.960170Z",
-     "shell.execute_reply": "2022-02-01T23:13:55.961317Z",
+     "iopub.execute_input": "2022-02-01T23:16:01.447807Z",
+     "iopub.status.busy": "2022-02-01T23:16:01.446577Z",
+     "iopub.status.idle": "2022-02-01T23:16:01.474569Z",
+     "shell.execute_reply": "2022-02-01T23:16:01.473708Z",
      "shell.execute_reply.started": "2022-02-01T23:04:05.873000Z"
     },
     "papermill": {
-     "duration": 0.032826,
-     "end_time": "2022-02-01T23:13:55.961728",
+     "duration": 0.037615,
+     "end_time": "2022-02-01T23:16:01.474752",
      "exception": false,
-     "start_time": "2022-02-01T23:13:55.928902",
+     "start_time": "2022-02-01T23:16:01.437137",
      "status": "completed"
     },
     "tags": []
@@ -60,20 +60,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b75fbb38",
+   "id": "f0bc7f2d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-01T23:13:55.975320Z",
-     "iopub.status.busy": "2022-02-01T23:13:55.974557Z",
-     "iopub.status.idle": "2022-02-01T23:13:56.121920Z",
-     "shell.execute_reply": "2022-02-01T23:13:56.121001Z",
+     "iopub.execute_input": "2022-02-01T23:16:01.491315Z",
+     "iopub.status.busy": "2022-02-01T23:16:01.489133Z",
+     "iopub.status.idle": "2022-02-01T23:16:01.647363Z",
+     "shell.execute_reply": "2022-02-01T23:16:01.647915Z",
      "shell.execute_reply.started": "2022-02-01T23:04:06.373620Z"
     },
     "papermill": {
-     "duration": 0.154684,
-     "end_time": "2022-02-01T23:13:56.122081",
+     "duration": 0.167485,
+     "end_time": "2022-02-01T23:16:01.648094",
      "exception": false,
-     "start_time": "2022-02-01T23:13:55.967397",
+     "start_time": "2022-02-01T23:16:01.480609",
      "status": "completed"
     },
     "tags": []
@@ -211,20 +211,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b0fbfbd7",
+   "id": "da24ed63",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-01T23:13:56.151827Z",
-     "iopub.status.busy": "2022-02-01T23:13:56.150129Z",
-     "iopub.status.idle": "2022-02-01T23:13:56.154381Z",
-     "shell.execute_reply": "2022-02-01T23:13:56.153826Z",
-     "shell.execute_reply.started": "2022-02-01T23:06:19.464609Z"
+     "iopub.execute_input": "2022-02-01T23:16:01.678636Z",
+     "iopub.status.busy": "2022-02-01T23:16:01.677753Z",
+     "iopub.status.idle": "2022-02-01T23:16:01.680815Z",
+     "shell.execute_reply": "2022-02-01T23:16:01.681351Z",
+     "shell.execute_reply.started": "2022-02-01T23:14:50.270241Z"
     },
     "papermill": {
-     "duration": 0.027396,
-     "end_time": "2022-02-01T23:13:56.154519",
+     "duration": 0.027731,
+     "end_time": "2022-02-01T23:16:01.681527",
      "exception": false,
-     "start_time": "2022-02-01T23:13:56.127123",
+     "start_time": "2022-02-01T23:16:01.653796",
      "status": "completed"
     },
     "tags": []
@@ -342,6 +342,119 @@
     "df=df[[\"Lat\",\"Long\"]]\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9910901d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-01T23:16:01.698106Z",
+     "iopub.status.busy": "2022-02-01T23:16:01.697110Z",
+     "iopub.status.idle": "2022-02-01T23:16:01.723933Z",
+     "shell.execute_reply": "2022-02-01T23:16:01.724433Z",
+     "shell.execute_reply.started": "2022-02-01T23:14:59.479413Z"
+    },
+    "papermill": {
+     "duration": 0.03665,
+     "end_time": "2022-02-01T23:16:01.724597",
+     "exception": false,
+     "start_time": "2022-02-01T23:16:01.687947",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>49068.000000</td>\n",
+       "      <td>49068.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>21.433730</td>\n",
+       "      <td>23.528236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>24.950320</td>\n",
+       "      <td>70.442740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-51.796300</td>\n",
+       "      <td>-135.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.873054</td>\n",
+       "      <td>-15.310100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>23.634500</td>\n",
+       "      <td>21.745300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>41.204380</td>\n",
+       "      <td>80.771797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>71.706900</td>\n",
+       "      <td>178.065000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Lat          Long\n",
+       "count  49068.000000  49068.000000\n",
+       "mean      21.433730     23.528236\n",
+       "std       24.950320     70.442740\n",
+       "min      -51.796300   -135.000000\n",
+       "25%        7.873054    -15.310100\n",
+       "50%       23.634500     21.745300\n",
+       "75%       41.204380     80.771797\n",
+       "max       71.706900    178.065000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
   }
  ],
  "metadata": {
@@ -364,14 +477,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.553716,
-   "end_time": "2022-02-01T23:13:58.769451",
+   "duration": 10.975964,
+   "end_time": "2022-02-01T23:16:02.341093",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-02-01T23:13:46.215735",
+   "start_time": "2022-02-01T23:15:51.365129",
    "version": "2.3.3"
   }
  },
