--- a/attendance-6-2-2022.ipynb
+++ b/attendance-6-2-2022.ipynb
@@ -3,22 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c7609dec",
+   "id": "b1b2d662",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-02-11T12:33:35.058072Z",
-     "iopub.status.busy": "2022-02-11T12:33:35.053190Z",
-     "iopub.status.idle": "2022-02-11T12:33:35.079285Z",
-     "shell.execute_reply": "2022-02-11T12:33:35.078472Z",
+     "iopub.execute_input": "2022-02-11T13:04:07.721108Z",
+     "iopub.status.busy": "2022-02-11T13:04:07.720372Z",
+     "iopub.status.idle": "2022-02-11T13:04:07.734993Z",
+     "shell.execute_reply": "2022-02-11T13:04:07.734333Z",
      "shell.execute_reply.started": "2022-02-11T12:32:52.377167Z"
     },
     "papermill": {
-     "duration": 0.040916,
-     "end_time": "2022-02-11T12:33:35.079456",
+     "duration": 0.032571,
+     "end_time": "2022-02-11T13:04:07.735198",
      "exception": false,
-     "start_time": "2022-02-11T12:33:35.038540",
+     "start_time": "2022-02-11T13:04:07.702627",
      "status": "completed"
     },
     "tags": []
@@ -65,66 +65,122 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e5cfc6b5",
+   "id": "896be73a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T12:33:35.098112Z",
-     "iopub.status.busy": "2022-02-11T12:33:35.097445Z",
-     "iopub.status.idle": "2022-02-11T12:33:37.278415Z",
-     "shell.execute_reply": "2022-02-11T12:33:37.277870Z",
-     "shell.execute_reply.started": "2022-02-11T12:32:52.720938Z"
+     "iopub.execute_input": "2022-02-11T13:04:07.755867Z",
+     "iopub.status.busy": "2022-02-11T13:04:07.755128Z",
+     "iopub.status.idle": "2022-02-11T13:04:09.943826Z",
+     "shell.execute_reply": "2022-02-11T13:04:09.943299Z",
+     "shell.execute_reply.started": "2022-02-11T13:03:32.157417Z"
     },
     "papermill": {
-     "duration": 2.193058,
-     "end_time": "2022-02-11T12:33:37.278577",
+     "duration": 2.203065,
+     "end_time": "2022-02-11T13:04:09.943977",
      "exception": false,
-     "start_time": "2022-02-11T12:33:35.085519",
+     "start_time": "2022-02-11T13:04:07.740912",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WorkId</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Machine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4976</th>\n",
+       "      <td>31660</td>\n",
+       "      <td>2022-02-06</td>\n",
+       "      <td>00:00:05</td>\n",
+       "      <td>galaa_out1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      WorkId       Date      Time     Machine\n",
+       "4976   31660 2022-02-06  00:00:05  galaa_out1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#list of machine name\n",
     "list_of_machine_names=['galaa_in1','galaa_in2','galaa_out1','galaa_out2','garag_kids_in','garag_kids_out','kela','kela2','kids_in','shoon']\n",
     "\n",
     " \n",
-    "\n",
-    "        \n",
+    "#read files and make DataFrame       \n",
     "for machine in list_of_machine_names:\n",
     "    globals()[machine]=pd.read_csv('../input/attendance-622022/{}.csv'.format(machine))\n",
     "    \n",
-    "\n",
+    "#what columns i need\n",
     "filter_col=['WorkId','Date','Time']\n",
     "\n",
+    "#clean my data and increase \"Machine\" column\n",
     "for new_df in list_of_machine_names:\n",
     "    globals()[new_df]=globals()[new_df][filter_col]\n",
     "    globals()[new_df]['Machine']=new_df\n",
     "    \n",
     "    \n",
-    "\n",
+    "#combine all files\n",
     "combined_files = pd.concat([globals()[f] for f in list_of_machine_names ])\n",
     "\n",
+    "#put data in \"combined\" file\n",
     "combined_files.to_csv( \"combined.csv\", index=False, encoding='utf-8-sig')\n",
-    "\n"
+    "\n",
+    "#convert date from string to date time\n",
+    "combined_files['Date']=pd.to_datetime(combined_files['Date'])\n",
+    "\n",
+    "#print last day in this attendane\n",
+    "combined_files.nlargest(1,'Date')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0c4e1d59",
+   "id": "2a0e2e97",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-11T12:33:37.317987Z",
-     "iopub.status.busy": "2022-02-11T12:33:37.316988Z",
-     "iopub.status.idle": "2022-02-11T12:33:37.629737Z",
-     "shell.execute_reply": "2022-02-11T12:33:37.628967Z",
-     "shell.execute_reply.started": "2022-02-11T12:32:54.539388Z"
+     "iopub.execute_input": "2022-02-11T13:04:09.959292Z",
+     "iopub.status.busy": "2022-02-11T13:04:09.958609Z",
+     "iopub.status.idle": "2022-02-11T13:04:10.301638Z",
+     "shell.execute_reply": "2022-02-11T13:04:10.302132Z",
+     "shell.execute_reply.started": "2022-02-11T12:52:11.057008Z"
     },
     "papermill": {
-     "duration": 0.344928,
-     "end_time": "2022-02-11T12:33:37.629915",
+     "duration": 0.352158,
+     "end_time": "2022-02-11T13:04:10.302311",
      "exception": false,
-     "start_time": "2022-02-11T12:33:37.284987",
+     "start_time": "2022-02-11T13:04:09.950153",
      "status": "completed"
     },
     "tags": []
@@ -161,13 +217,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0781ebd4",
+   "id": "ae73db36",
    "metadata": {
     "papermill": {
-     "duration": 0.005928,
-     "end_time": "2022-02-11T12:33:37.642237",
+     "duration": 0.006078,
+     "end_time": "2022-02-11T13:04:10.314812",
      "exception": false,
-     "start_time": "2022-02-11T12:33:37.636309",
+     "start_time": "2022-02-11T13:04:10.308734",
      "status": "completed"
     },
     "tags": []
@@ -196,14 +252,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.167448,
-   "end_time": "2022-02-11T12:33:38.257804",
+   "duration": 13.637761,
+   "end_time": "2022-02-11T13:04:11.032056",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-02-11T12:33:25.090356",
+   "start_time": "2022-02-11T13:03:57.394295",
    "version": "2.3.3"
   }
  },
