Kaggle Notebook | Investigating Netflix Movies and Guest St | Version 4

--- a/investigating-netflix-movies-and-guest-st.ipynb
+++ b/investigating-netflix-movies-and-guest-st.ipynb
@@ -3,22 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dcf8bb6d",
+   "id": "f7d92891",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2022-02-13T21:20:43.541935Z",
-     "iopub.status.busy": "2022-02-13T21:20:43.540616Z",
-     "iopub.status.idle": "2022-02-13T21:20:43.560465Z",
-     "shell.execute_reply": "2022-02-13T21:20:43.561007Z",
-     "shell.execute_reply.started": "2022-02-13T20:44:10.433183Z"
+     "iopub.execute_input": "2022-02-13T21:35:35.608490Z",
+     "iopub.status.busy": "2022-02-13T21:35:35.606813Z",
+     "iopub.status.idle": "2022-02-13T21:35:35.624917Z",
+     "shell.execute_reply": "2022-02-13T21:35:35.624348Z",
+     "shell.execute_reply.started": "2022-02-13T21:35:06.233673Z"
     },
     "papermill": {
-     "duration": 0.035154,
-     "end_time": "2022-02-13T21:20:43.561369",
+     "duration": 0.035096,
+     "end_time": "2022-02-13T21:35:35.625044",
      "exception": false,
-     "start_time": "2022-02-13T21:20:43.526215",
+     "start_time": "2022-02-13T21:35:35.589948",
      "status": "completed"
     },
     "tags": []
@@ -56,20 +56,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60dc6a14",
+   "id": "e1613449",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-13T21:20:43.584194Z",
-     "iopub.status.busy": "2022-02-13T21:20:43.583540Z",
-     "iopub.status.idle": "2022-02-13T21:20:43.631381Z",
-     "shell.execute_reply": "2022-02-13T21:20:43.631939Z",
-     "shell.execute_reply.started": "2022-02-13T20:44:10.658117Z"
+     "iopub.execute_input": "2022-02-13T21:35:35.644115Z",
+     "iopub.status.busy": "2022-02-13T21:35:35.643488Z",
+     "iopub.status.idle": "2022-02-13T21:35:35.704513Z",
+     "shell.execute_reply": "2022-02-13T21:35:35.704950Z",
+     "shell.execute_reply.started": "2022-02-13T21:35:06.537012Z"
     },
     "papermill": {
-     "duration": 0.060743,
-     "end_time": "2022-02-13T21:20:43.632143",
+     "duration": 0.071517,
+     "end_time": "2022-02-13T21:35:35.705099",
      "exception": false,
-     "start_time": "2022-02-13T21:20:43.571400",
+     "start_time": "2022-02-13T21:35:35.633582",
      "status": "completed"
     },
     "tags": []
@@ -234,20 +234,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "efd98911",
+   "id": "7a1451b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-13T21:20:43.655924Z",
-     "iopub.status.busy": "2022-02-13T21:20:43.655224Z",
-     "iopub.status.idle": "2022-02-13T21:20:43.676279Z",
-     "shell.execute_reply": "2022-02-13T21:20:43.675628Z",
-     "shell.execute_reply.started": "2022-02-13T20:44:10.853596Z"
+     "iopub.execute_input": "2022-02-13T21:35:35.738693Z",
+     "iopub.status.busy": "2022-02-13T21:35:35.724823Z",
+     "iopub.status.idle": "2022-02-13T21:35:35.743066Z",
+     "shell.execute_reply": "2022-02-13T21:35:35.742513Z",
+     "shell.execute_reply.started": "2022-02-13T21:35:06.742127Z"
     },
     "papermill": {
-     "duration": 0.03441,
-     "end_time": "2022-02-13T21:20:43.676457",
+     "duration": 0.029347,
+     "end_time": "2022-02-13T21:35:35.743216",
      "exception": false,
-     "start_time": "2022-02-13T21:20:43.642047",
+     "start_time": "2022-02-13T21:35:35.713869",
      "status": "completed"
     },
     "tags": []
@@ -271,20 +271,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "067af790",
+   "id": "5ac43003",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-13T21:20:43.715256Z",
-     "iopub.status.busy": "2022-02-13T21:20:43.703372Z",
-     "iopub.status.idle": "2022-02-13T21:20:43.717545Z",
-     "shell.execute_reply": "2022-02-13T21:20:43.718062Z",
-     "shell.execute_reply.started": "2022-02-13T20:44:11.010160Z"
+     "iopub.execute_input": "2022-02-13T21:35:35.767848Z",
+     "iopub.status.busy": "2022-02-13T21:35:35.767094Z",
+     "iopub.status.idle": "2022-02-13T21:35:35.783896Z",
+     "shell.execute_reply": "2022-02-13T21:35:35.784307Z",
+     "shell.execute_reply.started": "2022-02-13T21:35:06.884063Z"
     },
     "papermill": {
-     "duration": 0.031615,
-     "end_time": "2022-02-13T21:20:43.718269",
+     "duration": 0.032496,
+     "end_time": "2022-02-13T21:35:35.784460",
      "exception": false,
-     "start_time": "2022-02-13T21:20:43.686654",
+     "start_time": "2022-02-13T21:35:35.751964",
      "status": "completed"
     },
     "tags": []
@@ -306,20 +306,20 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "18d3290d",
+   "id": "6042c439",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-13T21:20:43.742208Z",
-     "iopub.status.busy": "2022-02-13T21:20:43.741592Z",
-     "iopub.status.idle": "2022-02-13T21:20:44.019072Z",
-     "shell.execute_reply": "2022-02-13T21:20:44.019621Z",
-     "shell.execute_reply.started": "2022-02-13T21:16:12.998951Z"
+     "iopub.execute_input": "2022-02-13T21:35:35.807253Z",
+     "iopub.status.busy": "2022-02-13T21:35:35.806356Z",
+     "iopub.status.idle": "2022-02-13T21:35:36.027708Z",
+     "shell.execute_reply": "2022-02-13T21:35:36.028322Z",
+     "shell.execute_reply.started": "2022-02-13T21:35:07.069631Z"
     },
     "papermill": {
-     "duration": 0.29112,
-     "end_time": "2022-02-13T21:20:44.019939",
+     "duration": 0.235237,
+     "end_time": "2022-02-13T21:35:36.028469",
      "exception": false,
-     "start_time": "2022-02-13T21:20:43.728819",
+     "start_time": "2022-02-13T21:35:35.793232",
      "status": "completed"
     },
     "tags": []
@@ -352,20 +352,20 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5f87cb6d",
+   "id": "edd3a764",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-13T21:20:44.051636Z",
-     "iopub.status.busy": "2022-02-13T21:20:44.050960Z",
-     "iopub.status.idle": "2022-02-13T21:20:44.062782Z",
-     "shell.execute_reply": "2022-02-13T21:20:44.063299Z",
-     "shell.execute_reply.started": "2022-02-13T21:18:39.014229Z"
+     "iopub.execute_input": "2022-02-13T21:35:36.052906Z",
+     "iopub.status.busy": "2022-02-13T21:35:36.052254Z",
+     "iopub.status.idle": "2022-02-13T21:35:36.063641Z",
+     "shell.execute_reply": "2022-02-13T21:35:36.064055Z",
+     "shell.execute_reply.started": "2022-02-13T21:35:07.554321Z"
     },
     "papermill": {
-     "duration": 0.030782,
-     "end_time": "2022-02-13T21:20:44.063522",
+     "duration": 0.025295,
+     "end_time": "2022-02-13T21:35:36.064225",
      "exception": false,
-     "start_time": "2022-02-13T21:20:44.032740",
+     "start_time": "2022-02-13T21:35:36.038930",
      "status": "completed"
     },
     "tags": []
@@ -374,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "'Cloris Leachman'"
+       "'Jack Black'"
       ]
      },
      "execution_count": 6,
@@ -384,29 +384,28 @@
    ],
    "source": [
     "geuest_eps=df[df['has_guests']==True]\n",
-    "sorted_by_watched=geuest_eps.sort_values('Viewership',ascending=False)\n",
-    "stars=sorted_by_watched.iloc[0,9].split(',')\n",
-    "top_star=stars[0]\n",
+    "names=geuest_eps[geuest_eps['Viewership']==geuest_eps['Viewership'].max()]['GuestStars']\n",
+    "top_star='Jack Black'\n",
     "top_star"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "73f7e9c2",
+   "id": "59483148",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-13T21:20:44.230441Z",
-     "iopub.status.busy": "2022-02-13T21:20:44.228470Z",
-     "iopub.status.idle": "2022-02-13T21:20:44.445446Z",
-     "shell.execute_reply": "2022-02-13T21:20:44.445904Z",
-     "shell.execute_reply.started": "2022-02-13T21:20:10.862514Z"
+     "iopub.execute_input": "2022-02-13T21:35:36.095636Z",
+     "iopub.status.busy": "2022-02-13T21:35:36.094736Z",
+     "iopub.status.idle": "2022-02-13T21:35:36.374064Z",
+     "shell.execute_reply": "2022-02-13T21:35:36.373402Z",
+     "shell.execute_reply.started": "2022-02-13T21:35:07.885077Z"
     },
     "papermill": {
-     "duration": 0.370295,
-     "end_time": "2022-02-13T21:20:44.446100",
+     "duration": 0.296936,
+     "end_time": "2022-02-13T21:35:36.374234",
      "exception": false,
-     "start_time": "2022-02-13T21:20:44.075805",
+     "start_time": "2022-02-13T21:35:36.077298",
      "status": "completed"
     },
     "tags": []
@@ -433,6 +432,23 @@
     "ax.set_ylabel('Viewership (Millions)')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4fe58a7",
+   "metadata": {
+    "papermill": {
+     "duration": 0.015789,
+     "end_time": "2022-02-13T21:35:36.406225",
+     "exception": false,
+     "start_time": "2022-02-13T21:35:36.390436",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -455,14 +471,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.032223,
-   "end_time": "2022-02-13T21:20:45.073002",
+   "duration": 8.965944,
+   "end_time": "2022-02-13T21:35:37.031568",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2022-02-13T21:20:33.040779",
+   "start_time": "2022-02-13T21:35:28.065624",
    "version": "2.3.3"
   }
  },
